# CLOUDYA_FRONTEND

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOC.md  MANIFEST.in  README.md  README_autre.txt  README_total.txt  cli.py  cli.py.ori2  install.sh  pyproject.toml  questions.txt  requirements.txt  setup.cfg  setup.py  tree.txt
cloudya/: __init__.py  template_manager.py
cloudya-env/: cloudya-custom  pyvenv.cfg
cloudya/cli/: app.py  ask.py  chat.py  configure.py  connect.py  diagnose.py  hello.py  login.py  main.py  monitor.py  patch_chat.py  register.py  stack.py  template.py
cloudya/css/: chat.tcss
cloudya/utils/: ansible.py  ansible_apps.py  ansible_deployment.py  ansible_instances.py  ansible_inventory.py  config.py  credentials.py  system.py  terraform.py
cloudya/utils/providers/: __init__.py  aws.py  azure.py  gcp.py  nutanix.py  openstack.py  proxmox.py  vmware.py
commands/: chat.py  chat_simple.py  deploy.py  info.py  logout.py
templates/terraform/: main.tf  manifest.yaml
templates/terraform/aws/vpc/: outputs.tf  variables.tf
tests/: monitor_test.py  setup_test.py  simple_test_server.py  start_dev.sh  start_dev_simple.sh  test_cli.py  test_cloudya.py  test_config.py  test_server.py  test_simple.py  test_system.py
utils/: ansible.py  system.py  terraform.py
