[metadata]
name = cloudya
version = 0.1.0
description = CLI DevOps intelligente avec assistant IA pour l'automatisation cloud
author = Votre Nom
author_email = email@example.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Systems Administration

[options]
packages = find:
python_requires = >=3.8
install_requires =
    typer>=0.9.0
    rich>=13.0.0
    psutil>=5.9.0
    pyyaml>=6.0.0
    requests>=2.28.0

[options.entry_points]
console_scripts =
    cloudya = cloudya.cli:main
